--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -7,7 +7,7 @@
     android:layout_gravity="center_vertical"
     android:layout_marginBottom="90dp"
     android:columnCount="1"
-    android:padding="30dp"
+    android:padding="20dp"
     android:rowCount="3"
     tools:context=".NewMessage">
 
@@ -29,7 +29,7 @@
         android:layout_marginTop="15dp"
         android:textStyle="bold" />
 
-    <LinearLayout
+    <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -37,9 +37,10 @@
         android:layout_marginTop="15dp"
         tools:context=".MainActivity">
 
+
         <Button
             android:id="@+id/slash"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="/"
             android:textSize="20sp"
@@ -47,7 +48,7 @@
 
         <Button
             android:id="@+id/dash"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="-"
             android:textSize="20sp"
@@ -62,7 +63,7 @@
             tools:ignore="ButtonStyle,HardcodedText" />
 
 
-    </LinearLayout>
+    </GridLayout>
 
 
     <LinearLayout
