--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -94,6 +94,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
+        android:layout_marginBottom="10sp"
         android:orientation="horizontal">
 
 
@@ -119,6 +120,14 @@
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/dicionario"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#D7DAD7"
+        android:textSize="20sp"
+        android:text="Dicionário" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -147,11 +156,5 @@
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
     </LinearLayout>
-
-    <Button
-        android:id="@+id/dicionario"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Dicionario" />
 
 </LinearLayout>
