--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -27,14 +27,27 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <EditText
+        <TextView
+            android:id="@+id/translated_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="10sp"
+            android:background="#76FF03"
+            android:padding="7.5sp"
+            android:textColor="#000000"
+            android:textStyle="italic"
+            android:textAlignment="center"
+            android:textSize="20sp"
+            tools:ignore="Autofill,HardcodedText" />
+
+        <TextView
             android:id="@+id/text_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:hint="Digite o número do telefone"
             android:layout_marginTop="10sp"
-            android:inputType="phone"
             android:background="#76FF03"
             android:padding="7.5sp"
             android:textColor="#000000"
