--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -127,8 +127,19 @@
             tools:ignore="ButtonStyle,HardcodedText" />
     </LinearLayout>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FFFFFF"
+        android:text="Dicionários"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="normal|bold"
+        tools:ignore="HardcodedText" />
+
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp">
 
@@ -139,7 +150,7 @@
             android:layout_marginRight="2.5sp"
             android:layout_weight="1"
             android:background="#D7DAD7"
-            android:text="Romano para Morse"
+            android:text="Romano/Morse"
             android:textSize="16sp"
             tools:ignore="ButtonStyle,HardcodedText"/>
 
@@ -150,7 +161,7 @@
             android:layout_marginRight="2.5sp"
             android:layout_weight="1"
             android:background="#D7DAD7"
-            android:text="Morse para Romano"
+            android:text="Morse/Romano"
             android:textSize="16sp"
             tools:ignore="ButtonStyle,HardcodedText"/>
 
