--- a/app/src/main/res/layout/activity_morse_to_char.xml
+++ b/app/src/main/res/layout/activity_morse_to_char.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Arraste para o lado"
+        android:layout_marginBottom="10sp"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="normal|bold"
