--- a/app/src/main/res/layout/activity_morse_to_char.xml
+++ b/app/src/main/res/layout/activity_morse_to_char.xml
@@ -13,9 +13,9 @@
         android:layout_height="wrap_content"
         android:text="Arraste para o lado"
         android:textAlignment="center"
+        android:textColor="#000000"
         android:textSize="24sp"
-        android:textStyle="normal|bold"
-        android:textColor="#000000" />
+        android:textStyle="normal|bold" />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
@@ -44,8 +44,8 @@
         android:id="@+id/back"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#D7DAD7"
         android:layout_marginTop="10sp"
+        android:background="#D7DAD7"
         android:text="voltar"
         android:textSize="20sp"
         tools:ignore="ButtonStyle,HardcodedText" />
