--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -9,19 +9,6 @@
     android:padding="30sp"
     tools:context=".SendMessage">
 
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            app:srcCompat="@drawable/message" />
-    </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -32,8 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:layout_marginTop="10sp"
-            android:background="#76FF03"
+            android:background="#FFFFFF"
             android:padding="7.5sp"
             android:textColor="#000000"
             android:textStyle="italic"
@@ -45,10 +31,10 @@
             android:id="@+id/text_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10sp"
             android:gravity="center_horizontal"
             android:hint="Digite o número do telefone"
-            android:layout_marginTop="10sp"
-            android:background="#76FF03"
+            android:background="#FFFFFF"
             android:padding="7.5sp"
             android:textColor="#000000"
             android:textStyle="italic"
@@ -80,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#D7DAD7"
-            android:text="-"
+            android:text="&#8210;"
             android:layout_marginRight="2.5sp"
             android:layout_marginLeft="2.5sp"
             android:textSize="20sp"
@@ -92,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#D7DAD7"
-            android:text="."
+            android:text="&#8226;"
             android:layout_marginLeft="2.5sp"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
@@ -159,7 +145,7 @@
             android:id="@+id/buttonMorseToChar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="2.5sp"
+            android:layout_marginLeft="2.5sp"
             android:layout_weight="1"
             android:background="#D7DAD7"
             android:text="Morse/Romano"
