--- a/app/src/main/res/layout/activity_new_message.xml
+++ b/app/src/main/res/layout/activity_new_message.xml
@@ -4,19 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
-    android:layout_marginBottom="50dp"
-    android:columnCount="1"
-    android:rowCount="3"
     android:background="#FFFFFF"
+    android:columnCount="1"
     android:orientation="vertical"
     android:padding="30sp"
+    android:rowCount="3"
     tools:context=".NewMessage">
 
     <TextView
         android:id="@+id/preview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10sp"
         android:background="#FFFFFF"
         android:padding="5sp"
         android:textAlignment="center"
@@ -27,21 +25,19 @@
         android:id="@+id/text_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10sp"
         android:background="#FFFFFF"
         android:hint="Digite em morse"
         android:padding="7.5sp"
         android:textAlignment="center"
         android:textColor="#000000"
-        android:textSize="20sp"
-        android:layout_marginTop="15dp"
-        android:textStyle="bold" />
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
         android:orientation="horizontal">
-
 
         <Button
             android:id="@+id/slash"
@@ -76,16 +72,13 @@
             android:text="&#8226;"
             android:textSize="20sp"
             tools:ignore="ButtonStyle,HardcodedText" />
-
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
-        android:layout_marginBottom="10sp"
         android:orientation="horizontal">
-
 
         <Button
             android:id="@+id/backspace"
@@ -113,6 +106,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10sp"
         android:background="#FFFFFF"
         android:text="Dicionários"
         android:textAlignment="center"
@@ -135,18 +129,18 @@
             android:background="#D7DAD7"
             android:text="Romano/Morse"
             android:textSize="16sp"
-            tools:ignore="ButtonStyle,HardcodedText"/>
+            tools:ignore="ButtonStyle,HardcodedText" />
 
         <Button
             android:id="@+id/buttonMorseToChar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="2.5sp"
+            android:layout_marginLeft="2.5sp"
             android:layout_weight="1"
             android:background="#D7DAD7"
             android:text="Morse/Romano"
             android:textSize="16sp"
-            tools:ignore="ButtonStyle,HardcodedText"/>
+            tools:ignore="ButtonStyle,HardcodedText" />
 
     </LinearLayout>
 
