--- a/app/src/main/res/layout/activity_char_to_morse.xml
+++ b/app/src/main/res/layout/activity_char_to_morse.xml
@@ -42,7 +42,7 @@
     </HorizontalScrollView>
 
     <Button
-        android:id="@+id/back"
+        android:id="@+id/backDictionary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10sp"
